# Simple-compiler

./: CMakeLists.txt  README.md  asm_command.cpp  asm_command.hpp  compiler.cpp  compiler.hpp  main.cpp  mask.cpp  mask.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp  variable.cpp  variable.hpp  varible.cpp  varible.hpp
kody_pl/: p1.pl  p2.pl  p3.pl  p4.pl  p5.pl  p6.pl
kody_s/: p1.s  p3.s  p4.s  p5.s  p6.s
